style.css
* {
    font-family: 'League Spartan' ,sans-serif;
}

canvas {
    position: absolute;
    z-index: -1;
    width: 100vw;
    height: 100vh;
}

body {
    padding: 0;
    margin: 0;
    background-color: #F4F4F4;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100vw;
}

.pointsDiv p{
    font-size: 4.5rem;
    margin: 0;
}

.gradient {
    position: absolute;
    z-index: 2;
    left: -540%;
    width: 24rem;
    height: 75%;
    pointer-events: none;
    background: linear-gradient(90deg,rgba(244, 244, 244, 1) 0%, rgba(244, 244, 244, 1) 25%, rgba(244, 244, 244, 0) 100%);
}

.hand {
    position: absolute;
    z-index: 1;
    right: 360%;
    top: 32%;
    pointer-events: none;
    display: block;
    width: 15rem;
}

.hand img {
    transform: translateX(-4rem);
    user-select: none;
    -webkit-user-drag: none;
    height: auto;
    display: block;
}

.hammer {
    position: absolute;
    z-index: 1;
    right: 100%;
    top: 15%;
    pointer-events: none;
}

.hammer img {
    max-height: 30rem;
    user-select: none;
    -webkit-user-drag: none;
}

.aga {
    position: relative;
    width: 7.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: visible;
}

.aga img {
    width: 200%;
    flex-shrink: 0;
    z-index: 0;
    cursor: pointer;
    user-select: none;
    -webkit-user-drag: none;
}

.upgrades {
    display: flex;
    flex-direction: row;
}

.upgrade {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;
    height: 16rem;
    width: 9.5rem;
}

.upgrade img {
    border: 0.15em solid #101010;
    border-radius: 25px;
    padding: 0.5rem;
    width: 7rem;
    height: 7rem;
    margin: 1rem 1rem 0.5rem;
    background-color: #F1F1F1;
}

.upgrade:hover .info {
    visibility: visible;
    opacity: 1;
}

.info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    visibility: hidden;
    border: 0.15em solid #101010;
    border-radius: 30px;
    padding: 0.5rem;
    width: 9.5rem;
    height: 3rem;
    opacity: 0;
    transition: opacity 0.3s ease, visibility 0.3s ease;
    background-color: #F1F1F1;
}

.info p, .info h3 {
    margin: 0;
}

.info h3 {
    font-weight: normal;
    font-size: 1.6rem;
    letter-spacing: 0.03em;
}

.info p {
    font-weight: 300;
    font-size: 1.2rem;
    letter-spacing: 0.03em;
}

.hidden {
    display: none;
}

#fire {
    position: absolute;
    top: 95%;
    left: 50%;
    transform: translate(-50%, -100%);
    z-index: -2;
    width: 1px;
}

